[package]
name = "cch23-scd91"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.6.20", features=["json", "macros"] }
axum-extra = { version="0.9.0", features=["cookie", "typed-header"] }
base64 = "0.21.5"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"
