[package]
name = "cch23-scd91"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version="0.6.20", features=["json", "macros"] }
axum-extra = { version="0.9.0", features=["cookie", "typed-header"] }
base64 = "0.21.5"
reqwest = { version="0.11.22", features=["json"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
