[package]
name = "cch23-scd91"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version="0.6.20", features=["json", "macros", "multipart", "ws"] }
axum-extra = { version="0.9.0", features=["cookie", "typed-header"] }
base64 = "0.21.5"
chrono = "0.4.31"
image = "0.24.7"
regex = "1.10.2"
reqwest = { version="0.11.22", features=["json"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-secrets = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid"]}
uuid = "1.6.1"
